src/index.css
@import-normalize; /* bring in normalize.css styles */

@font-face {
  font-family: 'Right Grotesk Compact Black';
  src: url(./assets/fonts/RightGroteskCompactBlack.woff2) format('woff2');
}

@font-face {
  font-family: 'Messina';
  src: url(./assets/fonts/MessinaSansMono-Regular.woff2) format('woff2');
}

@font-face {
  font-family: 'Messina';
  src: url(./assets/fonts/MessinaSansMono-SemiBold.woff2) format('woff2');
  font-weight: 600;
}

@font-face {
  font-family: 'BiroScriptPlus';
  src: url(./assets/fonts/BiroScriptPlus-Bold.woff2) format('woff2');
  font-weight: 700;
}

@font-face {
  font-family: 'BiroScriptUSPlus';
  src: url(./assets/fonts/BiroScriptUSPlus-Bold.woff2) format('woff2');
  font-weight: 700;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;

  font-family: 'Messina', monospace;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.2;
  text-transform: uppercase;

  background-color: #181818;
  color: #ffffff;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

ul,
ol {
  padding: 0;
  margin: 0;
  list-style: none;
}

a {
  text-decoration: none;
}

.swiper-slide.swiper-slide-active {
  display: flex;
  justify-content: center;
}

.marquee {
  position: absolute;
  width: 100vw;
  left: -50%;
  transform: translateX(50%);
  overflow: hidden;
  font-family: 'Pridi', sans-serif;
  font-weight: 600;
  font-size: 34px;
  text-transform: uppercase;
  background-color: #ffdc00;
}

.marquee__inner {
  display: flex;
}

.marquee__line {
  flex-shrink: 0;
  margin: 0;
  padding: 10px 15px;
  min-width: 100%;
  white-space: nowrap;
  animation-name: marqueeLine;
  animation-duration: 5s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
}

@keyframes marqueeLine {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
  }
}

